--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 
 <div class="logoForNav">
 	<a href="/index.html">
-		<img src="/images/logo.png" width="120" height="100" />
+		<img src="../logo.png" width="120" height="100" />
 	</a>
 </div>
 
