--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="logoForNav">
 	<a href="../index.html">
-		<img src="../images/logo.png" width="120" height="100" />
+		<img src="../logo.png" width="120" height="100" />
 	</a>
 </div>
 
