--- a/buy.html
+++ b/buy.html
@@ -11,8 +11,9 @@
 
 <div class="main">
 	<ul>
-		<li><a href="/index.html">Home</a></li>
-		<li><a href="/buy.html">Buy Now</a></li>
+		<li><a href="../index.html">Home</a></li>
+		<li><a href="../buy.html">Buy Now</a></li>
+		<li><a href="../projects.html">Our Projects</a></li>
 	</ul>
 </div>
 
