--- a/buy.html
+++ b/buy.html
@@ -22,6 +22,8 @@
 		<img src="../logo.png" width="120" height="100" />
 	</a>
 </div>
+	
+	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScuYuxqg_hBIICYL3UWvvs2mn8FS6lWCpBu12PLLz0iGxxUNg/viewform?embedded=true" width="640" height="1098" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 <h1 class="emailText" id="emailText"> <a href="https://raymergamedev@gmail.com" target="_blank">My Email </a></h1>
 </body>
