--- a/buy.html
+++ b/buy.html
@@ -22,7 +22,7 @@
 		<img src="../logo.png" width="120" height="100" />
 	</a>
 </div>
-	<div id="form" style="position: absolute; margin-left: auto; margin-right: auto; align-items: center;">
+	<div id="form" style="position: absolute; margin-left: auto; margin-right: auto; align-items: center; right: 500px;">
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScuYuxqg_hBIICYL3UWvvs2mn8FS6lWCpBu12PLLz0iGxxUNg/viewform?embedded=true" width="640" height="1098" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 	</div>
 		
